--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 name = "redis-keyspace-stats"
 version = "0.5.1"
 authors = ["Scott Hardy <scott.the.hardy@gmail.com>"]
-edition = "2018"
+edition = "2021"
 license = "MIT"
 description = "Analyzes your Redis keyspace and returns statistics about it"
 readme = "README.md"
@@ -11,13 +11,16 @@ keywords = ["redis"]
 categories = ["command-line-utilities", "database", "development-tools::profiling"]
 
 [dependencies]
-clap = "3.0.0-beta.2"
 glob = "0.3.0"
 humantime = "2.0.1"
 pretty-bytes = "0.2.2"
 prettytable-rs = "0.8.0"
 rand = "0.8.4"
 regex = "1.5.4"
+
+[dependencies.clap]
+version = "*"
+features = ["derive"]
 
 [dependencies.redis]
 version = "0.17.0"
